persona spacing bottom and top fix

--- a/sample-village.css
+++ b/sample-village.css
@@ -540,7 +540,7 @@ section {
 .village-persona-three {
 	border: .5px solid #AFADAD;
 	margin: 2rem 0;
-	padding: 2rem 0;
+	padding: 0 0 2rem 0;
 
 }
 
